--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import "styles/_colors.scss";
+
 .App {
   text-align: center;
 }
@@ -8,7 +10,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: $header-background-color;
   height: 150px;
   padding: 20px;
   color: white;
