Update for provider registration page

--- a/src/provider/components/provider-reservation-list/provider-reservation-list.scss
+++ b/src/provider/components/provider-reservation-list/provider-reservation-list.scss
@@ -1,6 +1,17 @@
-@import "../../../styles/breakpoints.scss";
+@import "../../../styles/settings.scss";
 
 .provider-reservation-list {
-  width: $lg-breakpoint;
+  width: $base-container-width;
   margin: auto auto;
+  table {
+    th {
+      font-size: 30px;
+    }
+
+    th,td {
+      vertical-align: top;
+      padding: 15px;
+      text-align: left;
+    }
+  }
 }
