--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700');
+@import 'styles/settings.scss';
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Work Sans', sans-serif;
+  font-size: $base-font-size;
 }
