Update for registration functionality

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,6 @@
-$read-color: red;
 $header-background-color: #222;
 
 $secondary-color: #de193a;
 $primary-color: #000;
 $grey-color: #dcddde;
+$loading-background: rgba(255,255,255,0.5);
