--- a/src/provider/components/provider-registration/provider-registration.scss
+++ b/src/provider/components/provider-registration/provider-registration.scss
@@ -1,6 +1,14 @@
 @import "styles/settings";
 
 .provider-registration {
+    position: relative;
     width: $base-form-container-width;
     margin: $base-top-margin auto 0 auto;
+
+    .loading {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
