--- a/src/common/components/textarea/textarea.scss
+++ b/src/common/components/textarea/textarea.scss
@@ -6,6 +6,7 @@
     display: block;
     resize: none;
     height: 243px;
+    padding: 18px 12px;
     border: 2px solid $grey-color;
     border-radius: 4px;
     font-size: $base-font-size;
