--- a/src/common/components/data-time-list-picker/data-time-list-picker__item/data-time-list-picker__item.scss
+++ b/src/common/components/data-time-list-picker/data-time-list-picker__item/data-time-list-picker__item.scss
@@ -1,6 +1,7 @@
 .data-time-list-picker__item {
     display: flex;
     align-items: center;
+    font-size: 15.5px;
 }
 
 .data-time-list-picker__remove-button {
