--- a/src/client/components/client-bookign-from/client-booking-form.scss
+++ b/src/client/components/client-bookign-from/client-booking-form.scss
@@ -5,3 +5,7 @@
     width: $base-form-container-width;
     margin: $base-top-margin auto 0 auto;
 }
+
+.client-booking-from__data-time-picker {
+    margin-top: 20px;
+}
