--- a/src/common/components/modal/modal.scss
+++ b/src/common/components/modal/modal.scss
@@ -1,4 +1,35 @@
+@import 'styles/settings';
+@import 'styles/colors';
+
+.modal_open {
+    visibility: visible;
+    width: 100%;
+    height: 100%;
+}
+
+.modal_hidden {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+}
+
 .modal {
     position: absolute;
-    background: white;
+    top: 0;
+    left: 0;
+    margin: auto auto;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal__popup {
+    width: $base-modal-width;
+    padding: 20px;
+
+    margin: $base-modal-top-margin auto 0 auto;
+    background-color: white;
+    box-shadow: 0 0 10px 2px rgba(0,0,0,0.5);
+}
+.modal__title {
+    margin-bottom: 10px;
 }
