--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,4 +1,7 @@
 $base-container-width: 960px;
+$base-modal-width: 560px;
 $base-font-size: 18px;
 $base-form-container-width: 655px;
+
 $base-top-margin: 20px;
+$base-modal-top-margin: 100px;
