Move Provider Services component to common

--- a/src/common/components/services/services.scss
+++ b/src/common/components/services/services.scss
@@ -1,8 +1,7 @@
 @import 'styles/colors';
 
-.provider-registration__services {
+.services {
     padding: 0;
-    margin: 20px 0 0 0;
     .checkbox {
         padding: 10px;
     }
