Added services to client booking form

--- a/src/client/components/client-bookign-from/client-booking-form.scss
+++ b/src/client/components/client-bookign-from/client-booking-form.scss
@@ -18,6 +18,10 @@
     margin-top: 20px;
 }
 
+.client-booking-from__services {
+    margin-top: 20px;
+}
+
 .client-booking-from__recurrence {
     .select {
         width: 100%;
