Update for reservation details page

--- a/src/provider/components/provider-reservation-details/provider-reservation-details.scss
+++ b/src/provider/components/provider-reservation-details/provider-reservation-details.scss
@@ -1,7 +1,7 @@
 @import 'styles/colors';
 @import 'styles/settings';
 
-.provider-order-details {
-    width: $base-container-width;
+.provider-reservation-details {
+    width: $base-form-container-width;
     margin: $base-top-margin auto 0 auto;
 }
